# TactixNet

./: .env.example  .gitignore  .pytest_out.txt  .ruff_out.txt  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: bidder.py  perception.py  utility.py
client/: __init__.py  models.py  squad_client.py
contracts/: __init__.py  enums.py  errors.py  events.py
docs/: architecture.md  benchmark-methodology.md  benchmark-results.md  protocol.md  simulation.md
engine/: bus.py  checkpoint.py  graph.py  heartbeat.py  live.py  negotiation.py  runner.py  state.py  strategy.py  strategy_context.py  worker.py
gateway/: app.py  events.py  live.py  persistence.py  relay.py  sessions.py  simulation_runner.py
openapi/: openapi.json
scripts/: compose_e2e.py  e2e_smoke.py  export_openapi.py
simulation/: benchmark.py  bounds.py  doctrine_bridge.py  driver.py  grid.py  mission.py  movement.py  run_demo.py  scenario.py
tests/: test_benchmark.py  test_bus.py  test_checkpoint_writes.py  test_client_sdk.py  test_concurrency.py  test_console.py  test_contracts.py  test_cooldown.py  test_distributed.py  test_distributed_relay.py  test_doctrine_live.py  test_doctrine_sim_bridge.py  test_engine_heartbeat.py  test_events.py  test_gateway.py  test_graph.py  test_guard_ai.py  test_live_pipeline.py  test_mission.py  test_movement.py  test_negotiation.py  test_openapi.py  test_persistence.py  test_redis_integration.py  test_run_demo.py  test_scaffold.py  test_scenario_editor.py  test_simulation_integration.py  test_soak.py  test_strategy.py  test_strategy_context.py  test_tactical_sim.py  test_utility.py
viewer/: console.html  (+1 more)
(+17 files in other folders)
