[project]
name = "tactixnet"
version = "0.3.0"
description = "Decentralized multi-agent coordination engine for real-time tactics games"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "soak: long-running soak tests (deselect with '-m \"not soak\"')",
    "e2e: end-to-end tests that spawn uvicorn subprocess",
]
addopts = ["-m", "not soak and not e2e"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
